// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tickerExternalAgentActions should filter by caller DID 1`] = `
Object {
  "tickerExternalAgentActions": Object {
    "__typename": "TickerExternalAgentActionsConnection",
    "nodes": Array [
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "IdentifiersUpdated",
        "palletName": "asset",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "AgentAdded",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "Issued",
        "palletName": "asset",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "GroupCreated",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "GroupPermissionsUpdated",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "ComplianceRequirementCreated",
        "palletName": "compliancemanager",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "AgentRemoved",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "AgentAdded",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "AgentRemoved",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "GroupCreated",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "GroupPermissionsUpdated",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "GroupChanged",
        "palletName": "externalagents",
      },
    ],
  },
}
`;

exports[`tickerExternalAgentActions should filter by event id 1`] = `
Object {
  "tickerExternalAgentActions": Object {
    "__typename": "TickerExternalAgentActionsConnection",
    "nodes": Array [
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0xbd8b5c568e457823d3d3f18d2d1cc1ed79a086124760e9df41a4c66e96de9b42",
        "eventId": "FundraiserFrozen",
        "palletName": "sto",
      },
    ],
  },
}
`;

exports[`tickerExternalAgentActions should filter by pallet name 1`] = `
Object {
  "tickerExternalAgentActions": Object {
    "__typename": "TickerExternalAgentActionsConnection",
    "nodes": Array [
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "ComplianceRequirementCreated",
        "palletName": "compliancemanager",
      },
    ],
  },
}
`;

exports[`tickerExternalAgentActions should return the transactions for ticker 1`] = `
Object {
  "tickerExternalAgentActions": Object {
    "__typename": "TickerExternalAgentActionsConnection",
    "nodes": Array [
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "IdentifiersUpdated",
        "palletName": "asset",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "AgentAdded",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "Issued",
        "palletName": "asset",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "GroupCreated",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "GroupPermissionsUpdated",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0xbe22c6f8fe0d907365c3ccbf7e955bab29844d0009e21944c66c56973c67fdd2",
        "eventId": "AgentAdded",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0xbd8b5c568e457823d3d3f18d2d1cc1ed79a086124760e9df41a4c66e96de9b42",
        "eventId": "AgentAdded",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "ComplianceRequirementCreated",
        "palletName": "compliancemanager",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "AgentRemoved",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "AgentAdded",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "AgentRemoved",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "GroupCreated",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "GroupPermissionsUpdated",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "eventId": "GroupChanged",
        "palletName": "externalagents",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0xbd8b5c568e457823d3d3f18d2d1cc1ed79a086124760e9df41a4c66e96de9b42",
        "eventId": "FundraiserCreated",
        "palletName": "sto",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0xbd8b5c568e457823d3d3f18d2d1cc1ed79a086124760e9df41a4c66e96de9b42",
        "eventId": "FundraiserFrozen",
        "palletName": "sto",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0xbd8b5c568e457823d3d3f18d2d1cc1ed79a086124760e9df41a4c66e96de9b42",
        "eventId": "FundraiserUnfrozen",
        "palletName": "sto",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0xbd8b5c568e457823d3d3f18d2d1cc1ed79a086124760e9df41a4c66e96de9b42",
        "eventId": "FundraiserWindowModified",
        "palletName": "sto",
      },
      Object {
        "__typename": "TickerExternalAgentAction",
        "callerId": "0xbd8b5c568e457823d3d3f18d2d1cc1ed79a086124760e9df41a4c66e96de9b42",
        "eventId": "FundraiserClosed",
        "palletName": "sto",
      },
    ],
    "totalCount": 19,
  },
}
`;
